--- a/package.json
+++ b/package.json
@@ -2,7 +2,13 @@
   "name": "auth-service",
   "version": "0.0.1",
   "main": "index.js",
+  "type": "module",
   "repository": "git@github.com:sajdakabir/auth-service.git",
+  "scripts": {
+    "dev": "nodemon index.js",
+    "test": "jest",
+    "start": "node index.js"
+  },
   "author": "sajda kabir",
   "license": "MIT",
   "dependencies": {
@@ -13,5 +19,14 @@
     "mongoose": "^8.2.4",
     "nodemon": "^3.1.0",
     "uuid": "^9.0.1"
+  },
+  "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.22.5",
+    "eslint": "^8.43.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^16.0.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "nodemon": "^2.0.22"
   }
 }
